# AirWave

./: README.md  metadata.json
airwave/: BUILD_GUIDE.md  config.json  config.py  main.py  os_control.py  requirements.txt  setup.py  tracker.py  ui.py
airwave/cpp/: CMakeLists.txt
airwave/cpp/src/: bindings.cpp  cursor_mapper.cpp  gesture_classifier.cpp  gesture_smoothing.cpp
src/: App.tsx  fileRegistry.ts  index.css
